syntax = "proto3";

option java_multiple_files = true;
package proto;

message AddReactionProto{
  string userId = 1;
  string postId = 2;
  bool like = 3;
}

message AddReactionResponseProto{
  string status = 1;
}

message AddPostProto{
  string ownerId = 1;
  string text = 2;
  bytes image = 3;
}

message AddPostResponseProto{
  string status = 1;
  string id = 2;
}

